# kafka-shop

./: Procfile  README.md  pyproject.toml
apps/: db.py  dependencies.py  statistics.py
apps/dealer/: __init__.py  constants.py  routes.py
apps/factory/: __init__.py  routes.py
apps/warehouse/: __init__.py  routes.py
core/: __init__.py  kafka.py  logging.py  models.py
